# lean

./: Cargo.toml
.github/workflows/: nightly.yml  pr.yml
docs/backlog/: TASK-009.md  TASK-010.md  TASK-011.md
docs/plans/: 2026-04-29-file-backed-agent-prompts.md
fixtures/config/: invalid.yaml  valid.yaml
src/: audit.rs  catalog.rs  cli.rs  config.rs  doctor.rs  events.rs  lib.rs  main.rs  prompts.rs  provider.rs  read_tools.rs  sandbox.rs  session.rs  tool_use.rs  workspace.rs
tests/: cli_contract.rs
