[package]
name = "lean"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Lightweight Execution Agent Network"
license = "MIT"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
